# python-boilerplate

./: .bandit  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  Pipfile  README.md  config.py  cookiecutter.json  pyproject.toml  setup.cfg  setup.py
.circleci/: codecov.yml  config.yml
.github/: CODEOWNERS  pull_request_template.md  release-drafter.yaml  release-drafter.yml
.github/workflows/: pull-request.yaml
docs/: search.html
docs-src/: conf.py
docs/.doctrees/: environment.pickle
myproj/: config.py
tests/: test_config.py  test_true.py
{{cookiecutter.project_name}}/: .bandit  .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Pipfile  README.md  mypy.ini  pyproject.toml  setup.py
{{cookiecutter.project_name}}/.github/: release-drafter.yml
{{cookiecutter.project_name}}/.github/workflows/: pull-request.yaml  release-drafter.yaml  release.yaml
{{cookiecutter.project_name}}/docs/: .buildinfo  genindex.html  index.html  objects.inv  searchindex.js
{{cookiecutter.project_name}}/docs-src/: Makefile  conf.py
{{cookiecutter.project_name}}/docs/.doctrees/: index.doctree
{{cookiecutter.project_name}}/docs/_sources/: index.rst.txt
{{cookiecutter.project_name}}/docs/_static/: documentation_options.js
{{cookiecutter.project_name}}/tests/: test_config.py  test_true.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __init__.py
