[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
no_inline_sort = true
force_grid_wrap = 0
use_parentheses = true
line_length = 80
skip = []
import_heading_stdlib = 'Standard library imports'
import_heading_thirdparty = 'Third party imports'
import_heading_firstparty = 'Local application imports'
import_heading_localfolder = 'Local folder imports'
known_first_party = ['.']

[tool.black]
line-length = 80
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs          # exclude a few common directories in the
  | \.git           # root of the project
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | tests/fixtures
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -v"
testpaths = [
    "tests",
]
python_files = "test_*.py"
junit_family = "legacy"

[tool.coverage.run]
branch = true
command_line = '-m pytest'
source = ['{{cookiecutter.project_name}}/']

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true
skip_empty = true
fail_under = 90
xml = true
verbose = true
